--- a/20181111/index.html
+++ b/20181111/index.html
@@ -287,7 +287,7 @@
                 <ul class="pager">
                     
                     <li class="previous">
-                        <a href="/algorithmetic/" data-toggle="tooltip" data-placement="top" title="算法测试1">&larr;
+                        <a href="/2019/7/7/" data-toggle="tooltip" data-placement="top" title="七夕夜">&larr;
                             Previous Post</a>
                     </li>
                     
